<resources>
    <string name="app_name">Naughty-Sign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intereses">Intereses</string>
    <string name="musica">Música</string>
    <string name="viajes">Viajes</string>
    <string name="fotografia">Fotografía</string>
    <string name="arte">Arte</string>
    <string name="baile">Baile</string>
    <string name="deporte">Deporte</string>
    <string name="aventuras">Aventuras</string>
    <string name="guitarra">Guitarra</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="dinos_quien_eres">¡Dinos quién eres!</string>
    <string name="correo">Correo</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="introduce_tu_contrasena">Introduce tu contraseña</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="accede_mediante_tu_cuenta_de_google">Accede mediante tu cuenta de Google</string>
    <string name="modificar_fotos">Modificar fotos</string>
    <string name="agregar_im_genes">Agregar Imágenes</string>
    <string name="remover_im_genes">Remover Imágenes</string>
    <string name="editar_foto_o_avatar">Editar foto o avatar</string>
    <string name="sobre_ti">Sobre ti</string>
    <string name="generales">Generales</string>
    <string name="registro">Registro</string>
    <string name="pareces_interesante_cu_ntanos_sobre_t">Pareces interesante. ¡Cuéntanos sobre tí!</string>
    <string name="estoy_de_acuerdo_con_los_t_rminos_y_la_pol_tica_de_privacidad">Estoy de acuerdo con los Términos y la Política de Privacidad</string>
    <string name="continuar">Continuar</string>
    <string name="ya_nos_conocemos">¿Ya nos conocemos?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="your">YOUR</string>
    <string name="lik">LIK</string>
    <string name="es">ES</string>
    <string name="mat">MAT</string>
    <string name="ches">CHES</string>
    <string name="km_de_distancia">KM de distancia.</string>
    <string name="configuraci_n">Configuración</string>
    <string name="acerca_de">Acerca de</string>
    <string name="language_english">Inglés</string>
    <string name="language_italiano">Italiano</string>
    <string name="language_español">Español</string>
    <string name="select_language">Selecciona un idioma</string>
    <string name="language_italian">Italiano</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="configurar_perfil">Opciones de perfil</string>
    <string name="cambiar_distancia_m_xima">Cambiar distancia máxima</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="cambiar_nombre_de_usuario">Cambiar Nombre de Usuario</string>
    <string name="cambiar_descripci_n">Cambiar Descripción</string>
    <string name="cambiar_cita">Cambiar Cita</string>
    <string name="cambiar_preferencias_rom_nticas">Cambiar Preferencias Románticas</string>
    <string name="cambiar_rango_de_edad">Cambiar Rango de Edad</string>
    <string name="cambiar_hobbies">Cambiar Hobbies</string>
    <string name="cambiar_fotos">Cambiar Fotos</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="descripci_n">descripción</string>
    <string name="cita">cita</string>
    <string name="hombres">Hombres</string>
    <string name="mujeres">Mujeres</string>
    <string name="otros">Otros</string>
    <string name="selecciona_el_rango_de_edad">Selecciona el rango de edad</string>
    <string name="rango_de_edad">Rango de edad:</string>
    <string name="rango_de_edad_seleccionado">Rango de edad seleccionado:</string>
    <string name="el_rango_seleccionado_no_es_v_lido">El rango seleccionado no es válido.</string>
    <string name="inserte_su_tipo_de_inter_s">Inserte su tipo de interés</string>
    <string name="has_introducido">"Has introducido: "</string>
    <string name="se_ha_almacenado_la_foto">Se ha almacenado la foto</string>
    <string name="no_se_ha_almacenado_la_foto">No se ha almacenado la foto</string>
    <string name="a_os">años</string>
    <string name="mostrar_mapa">mostrar_mapa</string>
    <string name="cambiar_ciudad">Cambiar Ciudad</string>
    <string name="cambiar_profesi_n">Cambiar Profesión</string>
    <string name="introduzca_una_nueva_cita">Introduzca una nueva cita</string>
    <string name="aplicar">Aplicar</string>
    <string name="introduzca_un_nuevo_nombre_de_usuario">Introduzca un nuevo nombre de usuario.</string>
    <string name="introduzca_una_nueva_descripci_n">Introduzca una nueva descripción</string>
    <string name="seleccione_la_ciudad_en_donde_habita">Seleccione la ciudad en donde habita</string>
    <string name="seleccione_su_profesi_n">Seleccione su profesión</string>
    <string name="like">Like!</string>
    <string name="next">Next!</string>
    <string name="dinos_un_poco_m_s_acerca_de_ti">Dinos un poco más acerca de ti</string>
    <string name="no_te_preocupes_solo_requerimos_datos_esenciales">¡No te preocupes, solo requerimos datos esenciales!</string>
    <string name="c_mo_te_llamas">¿Cómo te llamas?</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="empieza_con_una_peque_a_cita">¡Empieza con una pequeña cita!</string>
    <string name="tu_cita">Tu cita</string>
    <string name="cu_l_es_tu_edad">¿Cuál es tu edad?</string>
    <string name="comentanos_un_poco_sobre_t">Comentanos un poco sobre tí</string>
    <string name="error_al_generar_uri">Error al generar URI</string>
    <string name="error_al_guardar_foto">Error al guardar la imagen</string>
</resources>
