<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rose_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/interests_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="8dp"
        android:text="@string/intereses"
        android:textColor="@color/passion_red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
        ChipGroup sirve para agrupar Chips.

        Meterse a las clases internamente da gusto
        de ver por la manera en la que formatea el JavaDoc.

        ¡Si tienes alguna duda no dudes en entrar!
     -->
    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interests_text_view">

        <!--
            La idea es con el código agregar tantos Chip como intereses
            almacenados dentro de un vector para que sea más sencillo
            agregarlos. Ahora mismo pondré algunos manualmente de ejemplo.
        -->
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/musica"
            app:chipCornerRadius="20dp" />

        <!--
            Al ser seleccionados deberán ser de este color.
        -->
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rose_pastel"
            android:text="@string/viajes"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fotografia"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arte"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baile"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deporte"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aventuras"
            app:chipCornerRadius="20dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guitarra"
            app:chipCornerRadius="20dp" />

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>