<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/modificar_fotos"
            android:textColor="@color/passion_red"
            android:textSize="35sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:stretchColumns="0,1">

            <TableRow style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/add_photo_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/trans"
                    android:text="@string/agregar_im_genes"
                    android:textColor="@color/blue" />

                <Button
                    android:id="@+id/remove_photo_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/trans"
                    android:text="@string/remover_im_genes"
                    android:textColor="@color/blue" />

            </TableRow>

            <TableRow>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="photo"
                    android:scaleType="fitXY"
                    tools:ignore="HardcodedText"
                    tools:src="@tools:sample/avatars" />
            </TableRow>

        </TableLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>