<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matches"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/misty_rose">

    <!-- Resto de tu diseño existente -->
    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_matcher_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/headers_shape"
        android:elevation="50dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="35dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Contenido del encabezado -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/your"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cabra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription=""
                android:src="@drawable/goat"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="150dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="16dp"
                android:text="@string/mat"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription=""
                android:src="@drawable/moon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ches"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- RecyclerView dentro de un ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_matcher_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/matches_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <!-- FrameLayout para superponer el VideoView -->
    <FrameLayout
        android:id="@+id/video_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#AA000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Contenedor para centrar el VideoView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- VideoView centrado -->
            <VideoView
                android:id="@+id/video_view"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
